19.04.2010
      * Patch: Fix for libdir bug causing synths to not be available on some 64bit systems. By Orcan Ogetbil (rj)
12.04.2010
      * Fixed: LADSPA rack effects: Do not display LADSPA output controls (such as latency). (T356)
      * Fixed: Bug when cancelling 'save as' operation, says 'file exists'. Caused by my earlier compressed save fixes. (T356)
11.04.2010
      * Fixed: DSSI requested midi mapped controls were not correct. (T356)
      * Changed: Working on controllers, and saving their state. Synths like Organ should remember their state now. (T356)
        - Working on DSSI controls... Working on OSC stuff...
06.04.2010
      * Fixed: Jack midi, and DSSI: Midi controller knobs, sliders, boxes etc. not updating with current values. (T356)
        - Copied code in MidiPort::sendEvent() to JackMidi::processMidi() and DssiSynthIF::getData().
      * Fixed: DSSI: Crashing with unkown controllers sent to synths. (T356)
        - Ignore unkown controllers in DssiSynthIF::processEvent(). 
05.04.2010
      * Added: Rec enabled track moved with selection when only one track is rec enabled (rj)
      * Changed: Made canvas show grid the default (rj)
      * Added: Jack midi ports can now be renamed in the ports list dialog, by clicking on the name. (T356)
        - Also cleaned up ports list behaviour and added tooltips.
30.03.2010
      * Major reworks: Jack midi, routing system, multichannel synth ins/outs, midi strips and trackinfo pane. (T356)
        - WORK IN PROGRESS. Should be usable for current projects.
        - ADVISORY: If opening current projects you are advised to "save as" or back up your med files (waves should be OK)
           until all is deemed to be working OK. It is possible more changes to .med file structure are needed later.
        - Some .med project file structures have CHANGED (like routing). I have tested opening large existing projects, 
           then re-saving them. OK so far.