@@ -1,5 +1,6 @@
 19.04.2010
       * Patch: Fix for libdir bug causing synths to not be available on some 64bit systems. By Orcan Ogetbil (rj)
+      * Fixed: Drawing of grid when snaping to less than measure (rj)
 12.04.2010
       * Fixed: LADSPA rack effects: Do not display LADSPA output controls (such as latency). (T356)
       * Fixed: Bug when cancelling 'save as' operation, says 'file exists'. Caused by my earlier compressed save fixes. (T356)
